# Benchmark_TemplateMetaProgramming_Techniques

./: CMakeLists.txt  LICENSE  README.md
include/: utility.hpp
speedUp/: CMakeLists.txt
speedUp/eager_vs_lazy/: eager_remove_if.cpp.erb  lazy_remove_if.cpp.erb
speedUp/fast_tracking_with_dispatch/: fast_tracking.cpp.erb  utility_fast.hpp
speedUp/if_comp/: if_alias.cpp.erb  if_type.cpp.erb
speedUp/tacit_mp/: tacit_mp.cpp.erb  utility_tacit.hpp
